@@ -14,7 +14,8 @@
 
 FilterHtml::FilterHtml (FILE* filein, FILE* fileout,
                         bool isUniIn, bool isUniOut)
-  : FilterX (filein, fileout, isUniIn, isUniOut, "<wbr>")
+  : FilterX (filein, fileout, isUniIn, isUniOut, "<wbr>"),
+    chbuff (0)
 {
 }
 
